--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,19 @@
     <string name="bench_execute">Run Benchmark</string>
     <string name="bench_iteration">Iteration Count</string>
     <string name="bench_repeat">Repeats</string>
+    <string name="bench_platform">Platform</string>
+    <string name="bench_default_platform" translatable="false">go</string>
+    <string name="bench_about">About</string>
+    <string name="about_html" translatable="false"><![CDATA[
+    <h1>Benchtool-android</h1>
+    <br>
+    <br>
+    <h3>
+    <p>Android project on <a href="https://github.com/brunoshiroma/benchtool-android">github</a></p>
+    <br>
+    <p>Java project on <a href="https://github.com/brunoshiroma/benchtool-java">github</a></p>
+    <br>
+    <p>Golang project on <a href="https://github.com/brunoshiroma/benchtool-go">github</a></p>
+    </h3>
+]]></string>
 </resources>
